--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -4,8 +4,14 @@
   <ul>
     <% skills.forEach(function(s) { %>
       <li>
+        <form action="/skills/<%= s.id %>?_method=DELETE"
+          class="delete-form"
+          method="POST"
+          >
+          <button type="submit">X</button>
+        </form>
          <a href="/skills/<%= s.id %>"><%= s.skill %></a>
-      - 
+        - 
         <%= s.quality ? 'Good' : 'Not so good' %>
       </li>
     <% }); %>
