--- a/views/skills/show.ejs
+++ b/views/skills/show.ejs
@@ -3,5 +3,6 @@
   <h1>Skill id #<%= skill.id %></h1>
   <h3><%= skill.skill %></h3>
   <h3>Quality: <%= skill.quality ? 'good' : 'not so good' %></h3>
+  <a href="/skills/<%= skill.id %>/edit">Edit skill</a>
 
 <%- include('../partials/footer') %>
