minor typo updates

--- a/views/skills/edit.ejs
+++ b/views/skills/edit.ejs
@@ -9,7 +9,7 @@
     Quality
     </label>
   </p>
-  <button type="submit">Save Todo</button>
+  <button type="submit">Save SKill</button>
 </form>
 
 <%- include('../partials/footer') %>
